# prayer-clock

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.md  configure.ac  prepare.sh  readme-devel.txt
arch/: PKGBUILD
debian/DEBIAN/: control
doc/: COPYING  Makefile.am  changelog.txt
nsi/: package.nsi
res/: Makefile.am  prayer-clock.desktop  prayer-clock.glade  prayer-clock.ui  prayers.dtd  prayers.xml
src/: Makefile.am  Resources.cpp  Resources.hpp  aceaster.cpp  aceaster.h  acprayer.cpp  acprayer.h  easter.cpp  easter.h  prayer-clock.cpp  prayer-clock.hpp  prayer.cpp  prayer.h
